--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 # Site Author
 author:
   name             : "ّFateme Mirjalili"
-  avatar           : "/assets/images/4.jpg"
+  avatar           : "/assets/images/creative.jpg"
   bio              : I'm an assistant professor of Computer Science at IUST. I enjoy learning new things and sharing what I know with others. So far I've learned some science, math, computers, NLP, IT, BJJ, MMA, swimming, diving, flying... 
   location         : "یزد"
   email            : sauleh@gmail.com
