--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "ّFateme Mirjalili"
   avatar           : "/assets/images/creative.jpg"
-  bio              : I'm an assistant professor of Computer Science at IUST. I enjoy learning new things and sharing what I know with others. So far I've learned some science, math, computers, NLP, IT, BJJ, MMA, swimming, diving, flying... 
+  bio              : I am a student  at IUST. I enjoy learning new things and sharing what I know with others. So far I've learned some science, math, computers,skating,...
   location         : "یزد"
   email            : sauleh@gmail.com
   twitter: 
