--- a/_config.yml
+++ b/_config.yml
@@ -120,22 +120,13 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: mailto:fatemehmirjalili2000@gmail.com.com
+      url: mailto:fatemehmirjalili2000@gmail.com
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      # url: "https://fatememirjalili2000.github.io/"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
-      # url: "https://facebook.com/"
+      url: "https://fatememirjalili2000.github.io/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "github.com/fatememirjalili2000"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      # url: "ftmmrj2018"
+      url: "https://github.com/fatememirjalili2000/"
     - label: "Calendly"
       icon: "fas fa-calendar-alt"
       url: "https://calendly.com/fatemehmirjalili2000/"
@@ -143,24 +134,9 @@ author:
 # Site Footer
 footer:
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      # url:
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
-      # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url : "github.com/fatememirjalili2000"
-    - label: "GitLab"
-      icon: "fab fa-fw fa-gitlab"
-      # url:
-    - label: "Bitbucket"
-      icon: "fab fa-fw fa-bitbucket"
-      # url:
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      # url:
+      url : "https://github.com/fatememirjalili2000/"
     - label: "Calendly"
       icon: "fas fa-calendar-alt"
       url: "https://calendly.com/fatemehmirjalili2000/"
@@ -245,15 +221,6 @@ plugins:
   - jemoji
   - jekyll-include-cache
   - jekyll-remote-theme
-
-# mimic GitHub Pages with --safe
-whitelist:
-  - jekyll-paginate
-  - jekyll-sitemap
-  - jekyll-gist
-  - jekyll-feed
-  - jemoji
-  - jekyll-include-cache
 
 
 # Archives
