--- a/_config.yml
+++ b/_config.yml
@@ -108,10 +108,10 @@ analytics:
 # Site Author
 author:
   name             : "ّFateme Mirjalili"
-  avatar           : "/assets/images/creative.jpg"
+  avatar           : "/assets/images/4.jpg"
   bio              : I am a student  at IUST. I enjoy learning new things and sharing what I know with others. So far I've learned some science, math, computers,skating,...
   location         : "یزد"
-  email            : sauleh@gmail.com
+  email            : fatemehmirjalili2000@gmail.com
   twitter: 
   linkedin: fatememirjalili2000
   google_scholar: 
